fix text align of transactions and addresses.

--- a/public/css/richwallet.css
+++ b/public/css/richwallet.css
@@ -302,3 +302,8 @@
 .fui-check-inverted-2:before {
   content: "\e000";
 }
+
+
+.fix-btn {
+    padding: 0 12px;
+}
